--- a/Homework/Instructions/index.html
+++ b/Homework/Instructions/index.html
@@ -54,32 +54,59 @@
             </ul>
         </nav>
         <div class="container">
-            <div class="col-sm-6 col-md-3 single-post no-gutters" style="margin-top: 20%;">
-                    <div class="background: white">
-                        <h2 style="color: #3EBC9F;font-size: x-large;padding-left: 5%;"><strong>Summary: Lattitude vs. X</strong></h2>
-                        <hr style="width: 95%;">
-                        <div class="image-wrapper float-left pr-3">
-                            <img src="Resources\assets\images/Fig1.png"style="margin-left: 15px;" width="200" height="150" alt="">
-                        </div>                 
-                        <div class="single-post-content-wrapper p-3">
+            <div class="row">
+                <div class="col-sm-8 single-post no-gutters" style="margin-top: 120px;">
+                        <div class="background: white">
+                            <h2 style="color: #3EBC9F;font-size: x-large;padding-left: 5%;"><strong>Summary: Lattitude vs. X</strong></h2>
+                            <hr style="width: 95%;">
+                            <div class="image-wrapper float-left pr-3">
+                                <img src="Resources\assets\images/Fig1.png"style="margin-left: 15px;" width="200" height="150" alt="">
+                            </div>                 
                             <div class="single-post-content-wrapper p-3">
-                                The purpose of this project was to analye how weather
-                                changes as you get closer to the equator. To accomplish
-                                this analysis, we first pulled the data from the 
-                                OpenWeatherMap API to assemble a dataset on over 500 cities.
-                                <br><br>
-                                After assembling the dataset, we used Matplotlib to plot 
-                                various aspects of the weather vs. lattitude. Factors we 
-                                looked at included: temperature, cloudiness, wind speed, 
-                                and humidity. This site provides the source data and 
-                                visualizations created as part of the analysus, as well
-                                as explanations and descriptions of any trends and 
-                                correlations
+                                <div class="single-post-content-wrapper p-3">
+                                    The purpose of this project was to analye how weather
+                                    changes as you get closer to the equator. To accomplish
+                                    this analysis, we first pulled the data from the 
+                                    OpenWeatherMap API to assemble a dataset on over 500 cities.
+                                    <br><br>
+                                    After assembling the dataset, we used Matplotlib to plot 
+                                    various aspects of the weather vs. lattitude. Factors we 
+                                    looked at included: temperature, cloudiness, wind speed, 
+                                    and humidity. This site provides the source data and 
+                                    visualizations created as part of the analysus, as well
+                                    as explanations and descriptions of any trends and 
+                                    correlations
+                                </div>
                             </div>
-                        </div>
+                    </div>
                 </div>
-            </a>
+            </div>
+            <div class="col-sm-4 single-post no-gutters" style="margin-top: 100px;">
+                <div class="background: white">
+                    <h2 style="color: #3EBC9F;font-size: x-large;padding-left: 5%;"><strong>Summary: Lattitude vs. X</strong></h2>
+                    <hr style="width: 95%;">
+                    <div class="image-wrapper float-left pr-3">
+                        <img src="Resources\assets\images/Fig1.png"style="margin-left: 15px;" width="200" height="150" alt="">
+                    </div>                 
+                    <div class="single-post-content-wrapper p-3">
+                        <div class="single-post-content-wrapper p-3">
+                            The purpose of this project was to analye how weather
+                            changes as you get closer to the equator. To accomplish
+                            this analysis, we first pulled the data from the 
+                            OpenWeatherMap API to assemble a dataset on over 500 cities.
+                            <br><br>
+                            After assembling the dataset, we used Matplotlib to plot 
+                            various aspects of the weather vs. lattitude. Factors we 
+                            looked at included: temperature, cloudiness, wind speed, 
+                            and humidity. This site provides the source data and 
+                            visualizations created as part of the analysus, as well
+                            as explanations and descriptions of any trends and 
+                            correlations
+                        </div>
+                    </div>
+            </div>
         </div>
+
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
